src/passes/snapshots/ling__passes__resolve_names__tests__duplicate_global.snap
---
source: src/passes/resolve_names.rs
expression: "test_resolve(\"func foo() { foo() } func foo() {}\")"
---
(
    SymbolTable {
        symbol_lookup: [
            Function {
                ident: u!("foo"),
            },
        ],
    },
    [
        SymbolInUse(
            u!("foo"),
        ),
    ],
)
