src/passes/snapshots/ling__passes__resolve_names__tests__resolve.snap
---
source: src/passes/resolve_names.rs
expression: "Resolver::visit(&mut ast)"
---
(
    SymbolTable {
        symbol_lookup: [
            Function {
                ident: u!("foo"),
            },
        ],
    },
    [],
)
