src/passes/snapshots/ling__passes__resolve_names__tests__shadowed_global_shadowed_local.snap
---
source: src/passes/resolve_names.rs
expression: "test_resolve(\"func foo() { let a = 12; let a = 12; } func foo() {}\")"
---
(SymbolTable(
  symbols: [
    Symbol(
      ident: "int",
      kind: TyStruct(Builtin),
    ),
    Symbol(
      ident: "uint",
      kind: TyStruct(Builtin),
    ),
    Symbol(
      ident: "foo",
      kind: Function(Ast(Func(
        ident: Resolved(SymbolId(2)),
        ty_params: [],
        params: [],
        ret_ty: Tuple([]),
        body: Block(
          stmts: [
            Declaration(
              lhs: Resolved(SymbolId(4)),
              rhs: Const(ConstIdx(0)),
            ),
            Declaration(
              lhs: Resolved(SymbolId(5)),
              rhs: Const(ConstIdx(1)),
            ),
          ],
          final_expr: Unit,
        ),
      ))),
    ),
    Symbol(
      ident: "foo",
      kind: Function(Ast(Func(
        ident: Resolved(SymbolId(3)),
        ty_params: [],
        params: [],
        ret_ty: Tuple([]),
        body: Block(
          stmts: [],
          final_expr: Unit,
        ),
      ))),
    ),
    Symbol(
      ident: "a",
      kind: Var,
    ),
    Symbol(
      ident: "a",
      kind: Var,
    ),
  ],
  globals: {
    "foo": (Global, SymbolId(2)),
    "int": (Builtin, SymbolId(0)),
    "uint": (Builtin, SymbolId(1)),
  },
), "error: global `foo` shadowed\n\n")
