src/passes/snapshots/ling__passes__resolve_names__tests__shadowed_local.snap
---
source: src/passes/resolve_names.rs
expression: "test_resolve(\"func foo() { let a = 12; let a = 12; }\")"
---
(
    SymbolTable {
        symbol_lookup: [
            TyStruct {
                ident: u!("int"),
            },
            TyStruct {
                ident: u!("uint"),
            },
            Function {
                ident: u!("foo"),
            },
            Var {
                ident: u!("a"),
            },
            Var {
                ident: u!("a"),
            },
        ],
    },
    [],
)
