src/passes/snapshots/ling__passes__resolve_names__tests__unknown_var.snap
---
source: src/passes/resolve_names.rs
expression: "test_resolve(\"func foo() { bloop() }\")"
---
(
    SymbolTable {
        symbol_lookup: [
            Function {
                ident: u!("foo"),
            },
        ],
    },
    [
        SymbolNotFound(
            u!("bloop"),
        ),
    ],
)
